--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, p, a, i {
+    color: rgb(225, 239, 230);
     text-decoration: none;
 }
 
@@ -83,7 +84,28 @@ p, a {
     font-size: 3rem;
 }
 
+body {
+    margin: auto;
+    padding: 0 5rem;
+    width: 100%;
+    height: auto;
+    background: rgb(0, 4, 17);
+}
+
 /* header section */
+
+.bar {
+	margin: 0;
+	top: 0;
+	height: 25rem;
+	width: 100%;
+	background-color: rgb(0, 4, 17, .8);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 header {
     width: 100%;
     height: 100vh;
@@ -91,6 +113,28 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.headerLinks {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+
+nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly; 
+}
+
+.social {
+    width: 25%;
+    display: flex;
+    justify-content: space-around; 
 }
 
 /* spacers */
@@ -107,10 +151,31 @@ header {
 
 /* gallery section */
 .gallery {
+    padding: 0 10rem;
     width: 100%;
-    height: 100vh;
-    text-align: center;
-    background-color: rgb(0, 4, 17);
+    height: 100%;
+    text-align: center;  
+}
+
+.galleryText {
+    padding: 1%;
+}
+
+
+
+img {
+    padding: 0 6%;
+    width: 100%;
+    height: 30vh; 
+}
+
+.galleryImages {
+    width: 100%;
+    display: flex;
+	justify-content: center;
+    align-items: center;
+	gap: 3rem 0rem;
+	flex-wrap: wrap;
 }
 
 /* about us section */
@@ -127,22 +192,30 @@ header {
 .about-container {
     height: 100%;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: rgb(0, 4, 17, .8);
 }
 
 .about h2 {
+    margin: 30% 0;
+    width: 100%;
+}
+
+.about h3{
+    margin: 0;
     width: 100%;
 }
 
 .about-container .text {
-    width: 50%;
+    width: 55%;
 }
 
 /* contact us section */
 .contact {
+    width: 100%;
     text-align: center;
     background-image: url("../img/jumbo-restaurant.jpg");
     background-size: cover;
@@ -154,6 +227,9 @@ header {
 .contact-container {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     background-color: rgb(0, 4, 17, .8);
 }
 
@@ -185,6 +261,9 @@ header {
 }
 
 .contacts {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     width: 25%;
 }
 
@@ -196,14 +275,135 @@ footer {
     font-size: 3rem;
 }
 
+.footerContainer {
+	margin: 0;
+    padding: 1rem 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: rgb(0, 4, 17, .8);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.signUp {
+    width: 50%;
+    height: 100%;
+    text-align: center;
+}
+
+.button {
+    display: flex;
+    width: 100;
+    height: 50%;
+}
+
+input {
+    width: 75%;
+}
+
+.button-1 {
+    width: 25%;
+}
+
+nav {
+    width: 100%; 
+}
+
+nav .navContainer {
+    width: 100%;
+}
+
+nav .footerLinks {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.copyrightText {
+    padding-right: 10rem;
+    text-align: right;
+    font-size: 2rem;
+    color: white;
+}
+
 /* mobile media query */
 @media (max-width: 428px) {
+
+    body {
+        height: auto;
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
+
+    .mainContainer {
+        height: auto;
+    }
+
     /* header section */
-    
+    .bar {
+        padding-top: 1rem;
+        justify-content: space-between;
+        height: 48%;
+        width: 100%;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 5.5rem;
+    }
+
+    header nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .headerLinks {
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav {
+        height: 100%;
+        flex-direction: column;
+        align-items: center; 
+    }
+
+    a {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        font-size: 3rem;
+    }
+
+    .social {
+        width: 40%;
+        height: 40%;
+        align-items: center;
+    }
 
     /* gallery section */
+
     .gallery {
+        padding: 0;
+        width: 100%;
         height: auto;
+    }
+
+    .galleryImages {
+        width: 100%;
+    }
+
+    img {
+        padding: 0 0;
+        width: 100%;
     }
     
     /* about us section */
@@ -224,6 +424,10 @@ footer {
     /* contact us section */
     .contact h3 {
         padding-top: 2.5vh;
+    }
+
+    .text{
+    padding-top: 30%;
     }
     
     .info {
@@ -246,8 +450,49 @@ footer {
 
     /* footer section */
     footer {
-        height: auto;
+        height: 100%;
+    }
+    footer .footerContainer {
         padding-top: 2.5vh;
         font-size: 2rem;
+        flex-direction: column;
+    }
+
+    h4 {
+        font-size: 3rem;
+    }
+
+    .button {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        height: 5rem;
+    }
+
+    input {
+        width: 90%;
+    }
+
+    .button-1 {
+        width: 90%;
+    }
+
+    .signUp {
+        width: 100%;
+        height: 100%;  
+    }
+
+    .footerLinks {
+     flex-direction: column;
+     align-items: center;
+    }
+
+    .copyrightText {
+        padding: 0 20%;
+        width: 100%;
+        text-align: center;
+        font-size: 1.5rem;
     }
 }
